ie 호환성 추가

--- a/src/main/resources/templates/fragment/fp-cmmn.html
+++ b/src/main/resources/templates/fragment/fp-cmmn.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/vue.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/vue-the-mask/vue-the-mask.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/es6-promise/es6-promise.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/es6-promise/es6-promise.auto.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/axios.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lnb.js}"></script>
     <script type="text/javascript" th:src="@{/js/common.js}"></script>
