--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -168,20 +168,21 @@
                                 <th>주소<span class="icoMust"><em>필수</em></span></th>
                                 <td colspan="3">
                                     <input
+                                        id="bnZipcode"
                                         type="text"
                                         class="wZipcode"
                                         placeholder="우편번호"
-                                        v-model="daumPostcodeRslt.zonecode"
                                     >
                                     <a
                                         href="#;"
-                                        class="btnS colorWhite popLayerDaumPostcodeSrch_open"
-                                        onclick="layer_execDaumPostcode(); return false;"
+                                        class="btnS colorWhite"
+                                        @click="openDaumPostCode"
                                     >
                                         <span>주소 검색</span>
                                     </a>
                                     <p class="br">
                                         <input
+                                            id="bnAddrStr"
                                             type="text"
                                             class="wAddr"
                                             placeholder="주소 입력"
@@ -189,12 +190,15 @@
                                             @input="bnAddrStr = $event.target.value"
                                         >
                                         <input
+                                            id="bnAddrBldg"
                                             type="text"
                                             class="wAddr"
                                             placeholder="상세주소 입력"
                                             :value="bnAddrBldg"
                                             @input="bnAddrBldg = $event.target.value"
                                         >
+                                        <input type="hidden" id="bnAddrSido" :value="shopInfo.bnAddrSido">
+                                        <input type="hidden" id="bnAddrSigg" :value="shopInfo.bnAddrSigg">
                                     </p>
                                 </td>
                             </tr>
@@ -246,29 +250,6 @@
     <!-- //contents -->
 </div>
 
-<div layout:fragment="layer">
-    <!-- 팝업: 우편번호 찾기 -->
-    <div class="layerWrapper layerSizeM" id="popLayerDaumPostcodeSrch" style="display:inherit !important;">
-        <div class="layerHeader">
-            <strong>우편번호 찾기</strong>
-            <a href="#" class="btnClose popLayerDaumPostcodeSrch_close"><img th:src="@{/images/cmmn/btn-layer-close.png}"
-                                                                             alt="창닫기"></a>
-        </div>
-        <div class="layerContainer" style="display: inline-block;">
-            <div class="layerContent">
-
-                <!-- 컨텐츠 -->
-                <div class="guidanceWrapper">
-                    <vue-daum-postcode style="width: 559px; height: 300px;" @complete="daumPostcodeCB($event)" />
-                </div>
-                <!-- //컨텐츠 -->
-            </div>
-
-        </div>
-    </div>
-    <!-- //팝업: 우편번호 찾기 -->
-</div>
-
 <div layout:fragment="script">
     <script type="text/javascript">
         document.cookie = '_TI_NID=1; SameSite=None; Secure';
@@ -280,26 +261,41 @@
         // document.cookie = 'safeCookie7="webid"; SameSite=Lax;';
     </script>
 
-    <script type="text/javascript" th:src="@{/js/lib/vue-daum-postcode/index.js}"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
     <script type="text/javascript">
-        var g_cxt = '/'
-        g_cxt = g_cxt.substring(0, g_cxt.length-1);
+        function execDaumPostcode() {
+            new daum.Postcode({
+                oncomplete: function(data) {
+                    var roadAddr = data.roadAddress;
+                    var extraRoadAddr = '';
 
-        $(function () {
-            if ($(".layerWrapper").length) {
-                //개통결과등록
-                $('#popLayerDaumPostcodeSrch').popup();
-            }
-        });
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraRoadAddr += data.bname;
+                    }
+
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    if(extraRoadAddr !== ''){
+                        extraRoadAddr = ' (' + extraRoadAddr + ')';
+                    }
+
+                    document.getElementById('bnZipcode').value = data.zonecode;
+                    document.getElementById('bnAddrSido').value = data.sido;
+                    document.getElementById('bnAddrSigg').value = data.sigungu;
+                    document.getElementById("bnAddrStr").value = roadAddr;
+                    document.getElementById("bnAddrBldg").value = extraRoadAddr;
+                }
+            }).open();
+        }
 
         var app = new Vue({
-            el:"#app",
-            data:{
+            el: "#app",
+            data: {
                 initDone: false,
                 shopInfo: {},
                 oldImageList: [],
-                daumPostcodeRslt: {},
                 bnAddrStr: '',
                 bnAddrBldg: '',
                 bnPnNo: '',
@@ -312,19 +308,22 @@
                 this.getShopInfo()
             },
             watch: {
-                bnPnNo (newPhoneNo) {
+                bnPnNo: function (newPhoneNo) {
                     if (newPhoneNo.length === 2) {
                         this.setPhoneMask(newPhoneNo)
                     }
                 }
             },
             methods: {
-                getShopInfo() {
+                openDaumPostCode: function() {
+                    execDaumPostcode()
+                },
+                getShopInfo: function() {
                     this.initDone = false
                     var param = {}
                     cf_call("/shop/getShopInfo", param, this.getShopInfoCB);
                 },
-                getShopInfoCB(rslt){
+                getShopInfoCB: function(rslt){
                     if (rslt.bnPnNo !== undefined) {
                         this.setPhoneMask(rslt.bnPnNo)
                         this.bnPnNo = rslt.bnPnNo
@@ -333,7 +332,7 @@
                     this.shopInfo = rslt
                     this.initDone = true
                 },
-                uploadImage(tgtNm) {
+                uploadImage: function(tgtNm) {
                     this.uploadTgtNm = tgtNm
                     var fileTgt = ''
                     if (tgtNm === 'bnRegCard') {
@@ -351,13 +350,13 @@
                         cf_callWithFiles("/upload/image", fileList, param, this.uploadImageCB)
                     }
                 },
-                uploadImageCB(data) {
+                uploadImageCB: function(data) {
                     if (this.uploadTgtNm === 'bnRegCard') {
                         this.oldImageList.push(this.shopInfo.bnRegCard)
                         this.shopInfo.bnRegCard = data.filNm
                         this.shopInfo.cardChkYn = 'N'
                         $("#bnRegCard")[0].value = ''
-                    }``
+                    }
                     if (this.uploadTgtNm === 'bnImg') {
                         this.oldImageList.push(this.shopInfo.bnImg)
                         this.shopInfo.bnImg = data.filNm
@@ -365,30 +364,24 @@
                     }
                     alert('사진이 업로드 되었습니다.\n페이지 상단 \'저장\'을 누르시면 사진이 변경됩니다.')
                 },
-                modiShopInfo() {
+                modiShopInfo: function() {
                     var param = this.shopInfo
                     param.oldImageList = this.oldImageList
+                    param.bnAddrSido = $('#bnAddrSido')[0].value
+                    param.bnAddrSigg = $('#bnAddrSigg')[0].value
                     param.bnAddrDtl = this.bnAddrFull
                     param.bnRegNo = this.bnRegNoND
                     param.bnPnNo = this.bnPnNoND
                     cf_call("/shop/modiShopInfo", param, this.modiShopInfoCB)
                 },
-                modiShopInfoCB(rslt) {
+                modiShopInfoCB: function(rslt) {
                     if(rslt.rsltStat === "SUCC") {
                         alert("변경사항이 저장되었습니다.")
-                        this.daumPostcodeRslt = {}
                         this.bnAddrBldg = ''
                         this.getShopInfo()
                     }
                 },
-                daumPostcodeCB(e) {
-                    this.daumPostcodeRslt = e
-                    this.shopInfo.bnAddrSido = this.daumPostcodeRslt.sido
-                    this.shopInfo.bnAddrSigg = this.daumPostcodeRslt.sigungu
-                    this.bnAddrStr = this.daumPostcodeRslt.address
-                    $('#popLayerDaumPostcodeSrch').popup('hide')
-                },
-                setPhoneMask(phoneNo) {
+                setPhoneMask: function(phoneNo) {
                     var areaCode = phoneNo.substring(0, 2)
                     if (areaCode === '02') {
                         this.phoneMask = this.phoneMaskSeoul
@@ -396,20 +389,20 @@
                         this.phoneMask = this.phoneMaskOther
                     }
                 },
-                getImagePath(fileTgt, fileName) {
+                getImagePath: function(fileTgt, fileName) {
                     if (fileName !== undefined) {
                         return '/imageSrc?fileName=' + fileName
                     }
                 }
             },
             computed: {
-                bnAddrFull() {
-                    return this.bnAddrStr + ' ' + this.bnAddrBldg
+                bnAddrFull: function() {
+                    return $('#bnAddrStr')[0].value + ' ' + $('#bnAddrBldg')[0].value
                 },
-                bnRegNoND() {
+                bnRegNoND: function() {
                     return this.shopInfo.bnRegNo.replaceAll('-', '')
                 },
-                bnPnNoND() {
+                bnPnNoND: function() {
                     return this.bnPnNo.replaceAll('-', '')
                 }
             }
